<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2017-2022 Crown Copyright
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>koryphe</artifactId>
        <groupId>uk.gov.gchq.koryphe</groupId>
        <version>2.1.1-SNAPSHOT</version>
    </parent>
    <packaging>jar</packaging>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>core</artifactId>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>compile-jdk8</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>8</release>
                            <outputDirectory>${project.build.outputDirectory}_jdk8</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>testCompile-jdk8</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <release>8</release>
                            <outputDirectory>${project.build.testOutputDirectory}_jdk8</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jar-jdk8</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>jdk8</classifier>
                            <classesDirectory>${project.build.outputDirectory}_jdk8</classesDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-jar-jdk8</id>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                        <configuration>
                            <classifier>tests-jdk8</classifier>
                            <testClassesDirectory>${project.build.testOutputDirectory}_jdk8</testClassesDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
